More Hammock Progress than Byte Progress today.

--- a/app/assets/stylesheets/templates.css.sass
+++ b/app/assets/stylesheets/templates.css.sass
@@ -13,3 +13,17 @@ div#board
     float: left
     border: 2px solid #666
     padding: 10px
+
+div#simplemodal-container
+  background: #fff
+  height: 500px
+  width: 500px
+  border: 2px solid #000
+
+form
+  div
+    margin: 5px 0
+    label
+      display: inline-block
+      width: 200px
+      text-align: top
